fix: FullscreenDialog layout on mobile

--- a/common/components/FullscreenDialog/FullscreenDialog.module.scss
+++ b/common/components/FullscreenDialog/FullscreenDialog.module.scss
@@ -1,5 +1,5 @@
 .dialog {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -26,6 +26,7 @@
   &-footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     border-top: 1px solid var(--c-primary-unfocused);
     padding: 32px;
